# docu-mentor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/docu_mentor/: core.py  main.py  rag.py  ui.py  utils.py
src/docu_mentor/ai/: __init__.py  ingestion.py  rag.py
src/docu_mentor/core/: __init__.py  config.py
src/docu_mentor/models/: __init__.py  response_dtos.py
src/docu_mentor/types/: __init__.py  enums.py  types.py
src/docu_mentor/ui/: chat.py  setup.py
src/docu_mentor/ui/helpers/: session.py
